--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/victorfm03/node-js#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
-    "sequelize": "^6.37.7"
+    "mysql2": "^3.16.0",
+    "sequelize": "^6.37.7",
+    "sequelize-auto": "^0.8.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
